<resources>
    <string name="app_name">Калькулятор</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_sum">+</string>
    <string name="_subtract">-</string>
    <string name="_multiply">*</string>
    <string name="_divide">/</string>
    <string name="_solve">=</string>
    <string name="_value">0</string>
    <string name="_c">C</string>
    <string name="_prc">%</string>
    <string name="_sign">+/-</string>
    <string name="_back"><![CDATA[<-]]></string>
    <string name="_settings">Настройки</string>
    <string name="_theme_light_btn">Светлая тема</string>
    <string name="_theme_dark_btn">Темная тема</string>
    <string name="_back_btn">Назад</string>
</resources>