<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_small"

        tools:ignore="ExtraText">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/textNumber"
            style="@style/inputTextStyle"
            android:text="@string/_value" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonC"
            style="@style/buttonStyle"
            android:backgroundTint="@color/red"
            android:text="@string/_c" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPercent"
            style="@style/buttonStyle"
            android:text="@string/_prc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSign"
            style="@style/buttonStyle"
            android:text="@string/_sign" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            style="@style/buttonStyle"
            android:text="@string/_back" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            style="@style/buttonStyle"
            android:text="@string/_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            style="@style/buttonStyle"
            android:text="@string/_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            style="@style/buttonStyle"
            android:text="@string/_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMultiply"
            style="@style/buttonStyle"
            android:text="@string/_multiply"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_small"
        tools:ignore="ExtraText">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            style="@style/buttonStyle"
            android:text="@string/_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            style="@style/buttonStyle"
            android:text="@string/_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            style="@style/buttonStyle"
            android:text="@string/_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSubtract"
            style="@style/buttonStyle"
            android:text="@string/_subtract" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_small"
        tools:ignore="ExtraText">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/buttonStyle"
            android:text="@string/_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/buttonStyle"
            android:text="@string/_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/buttonStyle"
            android:text="@string/_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSum"
            style="@style/buttonStyle"
            android:text="@string/_sum" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDot"
            style="@style/buttonStyle"
            android:text="@string/_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            style="@style/buttonStyle"
            android:text="@string/_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSolve"
            style="@style/buttonStyle"
            android:text="@string/_solve" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDivide"
            style="@style/buttonStyle"
            android:text="@string/_divide" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>